--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,10 +17,12 @@ pool:
 
 
 steps:
+
   - task: UseDotNet@2
     inputs:
-      packageType: 'runtime'
-      version: '4.8.x'
+      packageType: 'sdk'
+      version: '3.1.x'
+      includePreviewVersions: true
   - task: DotNetCoreCLI@2
     inputs:
       command: 'build'
