--- a/Lunar Alchemy.csproj
+++ b/Lunar Alchemy.csproj
@@ -80,9 +80,7 @@
   <PropertyGroup>
     <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
-  </PropertyGroup>
+  <PropertyGroup />
   <PropertyGroup>
     <ManifestCertificateThumbprint>C7F75F9E5FA3B2D56B6EC52D6FE53E8EEF326826</ManifestCertificateThumbprint>
   </PropertyGroup>
@@ -148,6 +146,8 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
@@ -157,6 +157,7 @@
     <Compile Include="Lunar Alchemy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ROMHandler.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="UndoRedo.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="AsarDownload.cs" />
@@ -188,7 +189,6 @@
     <None Include="packages\Newtonsoft.Json.12.0.3\.signature.p7s" />
     <None Include="packages\Newtonsoft.Json.12.0.3\LICENSE.md" />
     <None Include="packages\Newtonsoft.Json.12.0.3\Newtonsoft.Json.12.0.3.nupkg" />
-    <None Include="Properties\app.manifest" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
