--- a/Lunar Alchemy.csproj
+++ b/Lunar Alchemy.csproj
@@ -137,6 +137,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="asarhook">
+      <HintPath>.\asarhook.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -152,7 +155,6 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="asar.cs" />
     <Compile Include="GFXHandler.cs" />
     <Compile Include="Lunar Alchemy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -164,7 +166,6 @@
     <Compile Include="Web.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="asar.dll" />
     <Content Include="game.ico" />
     <Content Include="packages\Newtonsoft.Json.12.0.3\lib\net20\Newtonsoft.Json.dll" />
     <Content Include="packages\Newtonsoft.Json.12.0.3\lib\net20\Newtonsoft.Json.xml" />
