--- a/Lunar Alchemy.csproj
+++ b/Lunar Alchemy.csproj
@@ -155,6 +155,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsarExt.cs" />
     <Compile Include="GFXHandler.cs" />
     <Compile Include="Lunar Alchemy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -166,6 +167,9 @@
     <Compile Include="Web.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="asar.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="game.ico" />
     <Content Include="packages\Newtonsoft.Json.12.0.3\lib\net20\Newtonsoft.Json.dll" />
     <Content Include="packages\Newtonsoft.Json.12.0.3\lib\net20\Newtonsoft.Json.xml" />
