--- a/Back/Properties/Settings.settings
+++ b/Back/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedclassNamespace="LA_Back.Properties" GeneratedclassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedclassNamespace="MOLE_Back.Properties" GeneratedclassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="AllowDangerAddress" Type="System.Boolean" Scope="Application">
