--- a/Back/app.config
+++ b/Back/app.config
@@ -2,14 +2,14 @@
 <configuration>
 <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-        <section name="LA_Back.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        <section name="MOLE_Back.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
 </configSections>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup><applicationSettings>
-        <LA_Back.Properties.Settings>
+        <MOLE_Back.Properties.Settings>
             <setting name="AllowDangerAddress" serializeAs="Bool">
                 <value>False</value>
             </setting>
-        </LA_Back.Properties.Settings>
+        </MOLE_Back.Properties.Settings>
     </applicationSettings>
 </configuration>
