First Steps towards restructuring & cleaning up, + lib dependency adjustments
+ Implemented LunarCompress lib dependency
= Restructured & Renamed many files/namespaces/classes/functions
- Removed many useless files/classes/functions
- Temporarily Removed part of the Asar autoupdating system (Specifically the hook updating and compilation, which was a useless mess)
+ Repurposed said Asar autoupdating system for a library verification and updating system for both Asar and LunarCompress
? Unsuccessfully Attempted to use LunarCompress to read, uncompress, and convert graphics directly from the ROM

--- a/Back/Back.csproj
+++ b/Back/Back.csproj
@@ -67,7 +67,8 @@
     </StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>game.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -113,9 +114,6 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="asarhook">
-      <HintPath>..\asarhook.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -131,7 +129,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="asar.cs" />
     <Compile Include="GFXHandler.cs" />
+    <Compile Include="lunarcompress.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -145,12 +145,6 @@
     <Compile Include="Utils.cs" />
     <Compile Include="AsarDownload.cs" />
     <Compile Include="Web.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="asar.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="game.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.8">
@@ -170,6 +164,14 @@
       <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <AdditionalFiles Include="asar.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AdditionalFiles>
+    <AdditionalFiles Include="lunarcompress.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AdditionalFiles>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSHARP.Targets" />
   <ProjectExtensions>
