--- a/Back/Properties/Settings.settings
+++ b/Back/Properties/Settings.settings
@@ -1,9 +1,18 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedclassNamespace="MOLE_Back.Properties" GeneratedclassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="MOLE_Back.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="AllowDangerAddress" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">False</Value>
+    <Setting Name="UPDATE_main" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="UPDATE_main_mode" Type="System.String" Scope="User">
+      <Value Profile="(Default)">release</Value>
+    </Setting>
+    <Setting Name="UPDATE_asar" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="UPDATE_asar_mode" Type="System.String" Scope="User">
+      <Value Profile="(Default)">release</Value>
     </Setting>
   </Settings>
 </SettingsFile>
