--- a/Back/app.config
+++ b/Back/app.config
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
 <configSections>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-        <section name="MOLE_Back.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <section name="MOLE_Back.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
 </configSections>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup><applicationSettings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup>
+    <userSettings>
         <MOLE_Back.Properties.Settings>
-            <setting name="AllowDangerAddress" serializeAs="Bool">
-                <value>False</value>
+            <setting name="UPDATE_main" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="UPDATE_main_mode" serializeAs="String">
+                <value>release</value>
+            </setting>
+            <setting name="UPDATE_asar" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="UPDATE_asar_mode" serializeAs="String">
+                <value>release</value>
             </setting>
         </MOLE_Back.Properties.Settings>
-    </applicationSettings>
+    </userSettings>
 </configuration>
