ACTUALLY fix DLL duplication issues by realizing 'Win' project doesn't directly depend on them but rather depends on 'Back' meaning the DLLs only need to be contained in the 'Back' Project Ammend to 6c8db7eb54bc27a1b5b50f56a69a7365d1898ce9

--- a/Back/Back.csproj
+++ b/Back/Back.csproj
@@ -165,12 +165,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <AdditionalFiles Include="asar.dll">
+    <None Include="asar.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </AdditionalFiles>
-    <AdditionalFiles Include="lunarcompress.dll">
+    </None>
+    <None Include="lunarcompress.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </AdditionalFiles>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSHARP.Targets" />
   <ProjectExtensions>
