--- a/Win/Win.csproj
+++ b/Win/Win.csproj
@@ -53,6 +53,9 @@
   <PropertyGroup>
     <StartupObject>win.Program</StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>ico.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -127,6 +130,9 @@
       <Project>{e23d05a4-3170-467b-9887-5e81d9861a51}</Project>
       <Name>Back</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ico.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
