--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Thanks for your Issue report and welcome to the LunarAlchemy repository :3'
-        pr-message: 'Thanks for your Pull Request and welcome to the LunarAlchemy repository :3'
+        issue-message: 'Thanks for your Issue report and welcome to the MOLE repository :3'
+        pr-message: 'Thanks for your Pull Request and welcome to the MOLE repository :3'
