Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,3 +40,4 @@ steps:
       $Params = "smwu.sfc"
       & "$Command" $Parms.Split(" ")
     workingDirectory: 'src\Back\bin\Release'
+    errorActionPreference: 'continue'
