--- a/src/Back/app.config
+++ b/src/Back/app.config
@@ -8,17 +8,14 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup>
     <userSettings>
         <MOLE_Back.Properties.Settings>
-            <setting name="UPDATE_main" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="UPDATE_main_mode" serializeAs="String">
+            <setting name="UPDATE_Asar" serializeAs="String">
                 <value>release</value>
             </setting>
-            <setting name="UPDATE_asar" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="UPDATE_asar_mode" serializeAs="String">
+            <setting name="UPDATE_MOLE" serializeAs="String">
                 <value>release</value>
+            </setting>
+            <setting name="UPDATE_LunarCompress" serializeAs="String">
+                <value>False</value>
             </setting>
         </MOLE_Back.Properties.Settings>
     </userSettings>
