deps update sequence stuff
* MakeHttpRequest now handles restricted headers
* UpdateSequence now properly downloads and extracts asardll
* Why cant i delete old asar.dll?
* Might need to revamp extraction and cleanup code a bit as it is quite messy and, as stated above, doesnt even work cuz i cant delete old asar.dll... if that is even what its doing... it could be that its trying to delete the new asar.dll instead of the old, might be an issue

--- a/src/Back/Back.csproj
+++ b/src/Back/Back.csproj
@@ -22,7 +22,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>false</MapFileExtensions>
     <TargetCulture>en</TargetCulture>
-    <ProductName>Lunar Alchemy</ProductName>
+    <ProductName>MOLE</ProductName>
     <PublisherName>Vawlpe</PublisherName>
     <ApplicationRevision>1</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
@@ -87,7 +87,7 @@
     <ManifestCertificateThumbprint>C7F75F9E5FA3B2D56B6EC52D6FE53E8EEF326826</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>Lunar Alchemy_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>MOLE_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
