--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Message that will be displayed on users'' first issue'
-        pr-message: 'Message that will be displayed on users'' first pr'
+        issue-message: 'Welcome to MOLE, thank you for your issue, it will be reviewed by mantainers soon'
+        pr-message: 'Welcome to MOLE, thank you for your PR, it will be reviewed by mantainers soon'
