Basic ROM and Pal Class

--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ImGui.NET\src\ImGui.NET\ImGui.NET.csproj" />
+    <ProjectReference Include="..\MOLE\MOLE.csproj" />
     <ProjectReference Include="..\VeldridController\VeldridController.csproj" />
     <ProjectReference Include="..\XNAController\XNAController.csproj" />
   </ItemGroup>
