--- a/MOLE/MOLE.csproj
+++ b/MOLE/MOLE.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>MOLE</RootNamespace>
     <StartupObject></StartupObject>
-    <AssemblyName>back</AssemblyName>
+    <AssemblyName>LibMole</AssemblyName>
     <ApplicationIcon />
   </PropertyGroup>
 
@@ -35,6 +35,16 @@
     <Content Include="libasar.so">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NLog" Version="5.0.0-preview.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="empty.asm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
