--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "src/src/MOLE/Util/TerraCompress"]
 	path = src/MOLE/Util/TerraCompress
 	url = https://github.com/Smallhacker/TerraCompress.git
+[submodule "src/Asar"]
+	path = src/Asar
+	url = https://github.com/RPGHacker/asar.git
